jss-compiler/tests/parser/valid/multidimensional_arrays.jss
function void main() {
    let int[2][3] matriz;
    matriz[0][0] = 10;
    matriz[1][2] = 20;
    
    let int val = matriz[0][0];
    console.log(val, matriz[1][2]);
}
