jss-compiler/tests/parser/invalid/invalid_input_target.jss
function void main() {
    input(10);
}
